# ShipEditor

./: .gitignore  README.md
FileConverter/: convert2dict.py  download_tree.py  keyword_file.py  main_converter.py
Interface/: README.md
Interface/src/: BoatManager.cpp  BoatManager.hpp  BoatRow.cpp  BoatRow.hpp  CMakeLists.txt  CmakeLists.txt  area.cpp  area.h  empirical_ship.h  input_area.cpp  input_area.h  main.cpp  main_window.cpp  main_window.h
Interface/src/section/: azimuth_section.cpp  azimuth_section.h  compass_section.cpp  compass_section.h  depth_section.cpp  dynamics_section.cpp  dynamics_section.h  engine_section.cpp  engine_section.h  general_section.cpp  general_section.h  gps_section.cpp  mesh_section.cpp  name_section.cpp  name_section.h  pano_section.cpp  pano_section.h  physical_section.cpp  propeller_section.cpp  propeller_section.h  propertie_section.cpp  propertie_section.h  propulsion_section.cpp  propulsion_section.h  radar_screen_section.cpp  radar_screen_section.h  radar_section.cpp  radar_section.h  rot_section.cpp  rot_section.h  rudder_section.cpp  rudder_section.h  sail_section.cpp  sails_section.cpp  sails_section.h  section.cpp  section.h  views_section.cpp  views_section.h  weather_section.cpp  (+3 more)
file converter/: README.md  convert2dict.py  download_tree.py
install/: install.nsi
res/: boat_empty.json  launch.sh  style.css
src/: BoatManager.cpp  BoatManager.hpp  BoatRow.cpp  BoatRow.hpp  BoatType.hpp  CMakeLists.txt  empirical_ship.cpp  empirical_ship.h  input_area.cpp  input_area.h  main.cpp  main_window.cpp  main_window.h  (+1 more)
(+61 files in other folders)
